# revshells

./: ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  README.md  TODO.md  main.cpp  revshells.qtcreator
qml/: CMakeLists.txt  PayloadGenerator.cpp  PayloadGenerator.h  main.cpp  main.qml
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Options.h
src/listeners/: CMakeLists.txt  ListenerFactory.h
src/listeners/implementations/: Hoaxshell_Listener.h  Msfconsole_Listener.h  NcBusyBox_Listener.h  NcFreeBsd_Listener.h  Nc_Listener.h  NcatExe_Listener.h  NcatTLS_Listener.h  Ncat_Listener.h  Openssl_Listener.h  Powercat_Listener.h  PwncatWindows_Listener.h  Pwncat_Listener.h  RlwrapNc_Listener.h  Rustcat_Listener.h  SocatTTY_Listener.h  Socat_Listener.h  WindowsConPty_Listener.h
src/logic/: Bash_I_Payload.cpp  Bash_I_Payload.h  InterfaceListener.h  InterfacePayload.h  ListenerFactory.h  NcFreeBsd_Listener.h  NcatExe_Listener.h  Ncat_Listener.h  Openssl_Listener.h  Options.h  Powercat_Listener.h  Pwncat_Listener.h  Rustcat_Listener.h  WindowsConPty_Listener.h
src/payloads/: CMakeLists.txt  PayloadFactory.cpp  PayloadFactory.h
src/payloads/implementations/: Bash_196_Payload.cpp  Bash_196_Payload.h  Bash_5_Payload.cpp  Bash_5_Payload.h  Bash_I_Payload.cpp  Bash_I_Payload.h  Bash_RL_Payload.cpp  Bash_RL_Payload.h  Bash_UDP_Payload.h  Busybox_Nc_Payload.cpp  Busybox_Nc_Payload.h  C_Payload.cpp  C_Payload.h  C_Sharp_Bash_I_Payload.cpp  C_Sharp_Bash_I_Payload.h  C_Sharp_TCP_Client_Payload.cpp  C_Sharp_TCP_Client_Payload.h  C_Windows_Payload.cpp  C_Windows_Payload.h  Curl_Payload.cpp  Curl_Payload.h  Haskell_Payload.cpp  Haskell_Payload.h  Nc_C_Payload.cpp  Nc_C_Payload.h  Nc_E_Payload.cpp  Nc_E_Payload.h  Nc_Exe_Payload.cpp  Nc_Exe_Payload.h  Nc_Mkfifo_Payload.cpp  Nc_Mkfifo_Payload.h  Ncat_E_Payload.cpp  Ncat_E_Payload.h  Ncat_Exe_E_Payload.cpp  Ncat_Exe_E_Payload.h  Ncat_UDP_Payload.cpp  Ncat_UDP_Payload.h  OpenSSL_Payload.cpp  OpenSSL_Payload.h  PHP_Ivan_Payload.cpp  (+11 more)
src/ui/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
tests/bash-payload-gen/: CMakeLists.txt
tests/bash-payload-gen/src/: main.cpp
